plugins/javaFX/testData/highlighting/loginForm.fxml
<?xml version="1.0" encoding="UTF-8"?>
<?import javafx.scene.layout.*?>
<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" <error descr="Attribute unknownAttr is not allowed here">unknownAttr</error>="val" xmlns:fx="http://javafx.com/fxml">
  <children>
    <AnchorPane id="anchorPane2" prefHeight="300.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
      <children>
      </children>
    </AnchorPane>
  </children>
  <stylesheets/>
  <<error descr="Cannot resolve symbol 'UnknownClass'">UnknownClass</error>/>
  <<error descr="Cannot resolve symbol 'unknownField'">unknownField</error>/>
</AnchorPane>
